# semestralka

./: CMakeLists.txt  POS semestralka.docx  README.md  client.c  downFolderPath.txt  pokus1.txt  semestralka.puml  server.c
